--- a/.htaccess
+++ b/.htaccess
@@ -2,6 +2,8 @@ RewriteEngine on
 
 RewriteRule ^last last.html [L,QSA]
 
+RewriteRule ^top top.html [L,QSA]
+
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^tx/(.*) index.php [L,QSA]
