--- a/.htaccess
+++ b/.htaccess
@@ -1,8 +1,8 @@
 RewriteEngine on
 
-RewriteRule ^last last.html [L,QSA]
+RewriteRule ^last$ last.html [L,QSA]
 
-RewriteRule ^top top.html [L,QSA]
+RewriteRule ^top$ top.html [L,QSA]
 
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
