--- a/.htaccess
+++ b/.htaccess
@@ -1,11 +1,14 @@
-RewriteEngine on
+DirectoryIndex page568524.html
+RewriteEngine On
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^(.*)/$ /$1 [L,R=301]
+RewriteRule ^last$ page627123.html
+RewriteRule ^top$ page627210.html
+RewriteRule ^about$ page627364.html
+RewriteRule ^privacy$ page627373.html
 
-RewriteRule ^about$ about.html [L,QSA]
-RewriteRule ^last$ last.html [L,QSA]
-RewriteRule ^top$ top.html [L,QSA]
-RewriteRule ^widgets$ widgets.html [L,QSA]
-RewriteRule ^privacy$ privacy.html [L,QSA]
 
+RewriteRule ^widgets$ widgets.html
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^tx/(.*) index.php [L,QSA]
@@ -17,9 +20,3 @@ RewriteRule ^address/(.*) index.php [L,QSA]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^search/(.*) index.php [L,QSA]
-
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*) index.html [L,QSA]
-
-RewriteRule ^$ index.html [L,QSA]
